# actions-testing

./: README.md  pyproject.toml
.github/workflows/: run-on-src.yaml  test_only_on_some_files.yaml
py1/: mod2.py
src/: mod1.py
