[tool.poetry]
name = "actions-testing"
version = "0.1.0"
description = "Testing for GitHub Actions"
authors = ["Jon Choate <choatej@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
